# green-grocer

./: Cargo.toml  README.md  docker-compose.yml
controller/: Cargo.toml
controller/src/: health_check.rs  lib.rs
controller/src/routes/: mod.rs  vegetables.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/models/: mod.rs  primitives.rs  sales.rs  vegetable.rs
domain/src/repositories/: mod.rs  vegetable.rs  vegetable_repository.rs
infrastructure/: Cargo.toml
infrastructure/src/postgres/: mod.rs
infrastructure/src/postgres/interactors/: vegetable.rs
infrastructure/src/postgres/repositories/: mod.rs  vegetable.rs  vegetable_repository.rs
macros/: Cargo.toml
macros/src/: entity_id.rs  lib.rs
migrations/: 20231101012920_create_sale_tables.down.sql  20231101012920_create_sale_tables.up.sql
usecase/: Cargo.toml
usecase/src/: lib.rs
usecase/src/interactors/: mod.rs  vegetable.rs
web/: Cargo.toml
web/src/: main.rs
