[package]
name = "controller"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = { version = "4.4.*", features = ["macros"] }
anyhow = "1.0.*"
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
