[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.*"
anyhow = "1.0.*"
controller = { path = "../controller" }
dotenvy = "0.15.7"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "time"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
