[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.*"
anyhow = "1.0.*"
controller = { path = "../controller" }
domain = { path = "../domain" }
dotenvy = "0.15.*"
env_logger = "0.10.*"
infrastructure = { path = "../infrastructure" }
sqlx = { version = "0.7.*", features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "time",
] }
tokio = { version = "1.33.*", features = ["macros", "rt-multi-thread"] }
